--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -31,6 +31,25 @@
           </p>
         </div>
       </swiper-slide>
+      <swiper-slide>
+        <div class="slide">
+          <img src="https://via.placeholder.com/150/771796" alt="" />
+          <h2>What is Appflow?</h2>
+          <p>
+            <b>Appflow</b> is a powerful set of services and features built on top of Ionic Framework that brings a
+            totally new level of app development agility to mobile dev teams.
+          </p>
+        </div>
+      </swiper-slide>
+      <swiper-slide>
+        <div class="slide">
+          <img src="https://via.placeholder.com/150/771796" alt="" />
+          <h2>Browse Contacts</h2>
+          <ion-button fill="clear" routerLink="/users">Continue 
+            <ion-icon slot="end"
+              name="arrow-forward"></ion-icon></ion-button>
+        </div>
+      </swiper-slide>
     </swiper-container>
   </div>
 </ion-content>
