--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -45,7 +45,7 @@
         <div class="slide">
           <img src="https://via.placeholder.com/150/771796" alt="" />
           <h2>Browse Contacts</h2>
-          <ion-button fill="clear" routerLink="/users">Continue 
+          <ion-button fill="clear" routerLink="/contacts">Continue 
             <ion-icon slot="end"
               name="arrow-forward"></ion-icon></ion-button>
         </div>
